# id-server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go
.github/workflows/: docker-publish.yaml  docker-publish.yml
config/: env.go
database/: client.go
ent/: client.go  config.go  ent.go  mutation.go  runtime.go  session.go  session_create.go  session_delete.go  session_query.go  session_update.go  totpmethod.go  totpmethod_create.go  totpmethod_delete.go  totpmethod_query.go  totpmethod_update.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
ent/enttest/: enttest.go
ent/hook/: hook.go
ent/migrate/: schema.go
ent/predicate/: predicate.go
ent/runtime/: runtime.go
ent/schema/: session.go  totpmethod.go  user.go
ent/session/: session.go  where.go
ent/totpmethod/: totpmethod.go  where.go
ent/user/: user.go  where.go
flux-system/: gotk-sync.yaml
middleware/: auth.go
migrations/2022-03-30-182610_initial/: up.sql
routes/: app.go
routes/user/: 2fa.go  avatar.go  connect.go  login.go  me.go  oidc.go  register.go  session.go  update.go  verify.go
src/: main.rs  models.rs  schema.rs
util/: connectClients.go  geo.go  hydra.go  ip.go  mail.go  s3.go  token.go
util/emails/: verify.html
