[package]
name = "id-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres", "uuid", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }